--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     Главная страница
 </h1> -->
 <body>
-    <a href="#">Главная</a><br>    
-    <a href="catalog.html">Каталог</a><br>
-    <a href="contacts.html">Котакты</a>
-    <h1>
+    <a class="link" href="#">Главная</a><br>    
+    <a class="link" href="catalog.html">Каталог</a><br>
+    <a class="link" href="contacts.html">Котакты</a>
+    <h1 class = "title">
         Главная страница
     </h1>
     <p class="text">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, autem.
     </p>
-    <h2>
+    <h2 class="title_h2" >
         Добро пожаловать на сайт
     </h2>
     <p>
