--- a/catalog.html
+++ b/catalog.html
@@ -6,14 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html">Главная</a><br>
-    <a href="#">Каталог</a><br>
-    <a href="contacts.html">Контакты</a><br>
+    <a class="link"  href="index.html">Главная</a><br>
+    <a class="link" href="#">Каталог</a><br>
+    <a class="link" href="contacts.html">Контакты</a><br>
 
-    <h1>
+    <h1 class="title" >
         Каталог
     </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit voluptate incidunt, dicta nam eum iure animi molestiae
+    <p class="text" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit voluptate incidunt, dicta nam eum iure animi molestiae
          sequi libero recusandae corporis consequuntur voluptas sed ratione reiciendis, ea voluptatem ab magni quaerat amet. 
          Iure similique, exercitationem sunt quisquam modi fuga quidem reprehenderit animi veniam maiores sapiente possimus placeat 
          repellat at fugit laboriosam quam hic corporis iste fugiat aliquam voluptas et cupiditate nobis. Voluptatibus ducimus voluptatum 
