--- a/contacts.html
+++ b/contacts.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 <body>
-    <a href="index.html">Главная</a><br>
-    <a href="catolog.html">Каталог</a><br>
-    <a href="#">Контакты </a><br>
+    <a class="link" href="index.html">Главная</a><br>
+    <a class="link" href="catolog.html">Каталог</a><br>
+    <a class="link" href="#">Контакты </a><br>
 
-    <h1>Связаться с нами</h1>
+    <h1 class="title">Связаться с нами</h1>
 
     <form action="">
         <input type="text" name="" id="" placeholder="Ваше имя"> <br>
