--- a/catalog.html
+++ b/catalog.html
@@ -6,14 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <a class="link"  href="index.html">Главная</a><br>
+    <a class="link" href="index.html">Главная</a><br>
     <a class="link" href="#">Каталог</a><br>
     <a class="link" href="contacts.html">Контакты</a><br>
 
-    <h1 class="title" >
+    <h1 class="title">
         Каталог
     </h1>
-    <p class="text" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit voluptate incidunt, dicta nam eum iure animi molestiae
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit voluptate incidunt, dicta nam eum iure animi molestiae
          sequi libero recusandae corporis consequuntur voluptas sed ratione reiciendis, ea voluptatem ab magni quaerat amet. 
          Iure similique, exercitationem sunt quisquam modi fuga quidem reprehenderit animi veniam maiores sapiente possimus placeat 
          repellat at fugit laboriosam quam hic corporis iste fugiat aliquam voluptas et cupiditate nobis. Voluptatibus ducimus voluptatum 
@@ -24,13 +24,11 @@
            excepturi debitis recusandae ex quis, minima aliquid non impedit quibusdam nobis. Eveniet itaque recusandae, expedita ex similique,
             quidem nostrum, magnam natus molestias nesciunt consequatur.</p>
 
-    <img src="./img/5.png" alt="Фото персонажа Джек"
-     width="512" height="900">
+    <img class="images_style" src="./img/5.png" alt="Фото персонажа Джек">
      <h4>3д  модель Джека Дарби</h4>
      <p> 3д модель под анимацию количество полигонов 10000. Текстурные карты: diff, metal, rough, norm. Размер карт 2048*2048</p>
      
-     <img src="./img/June6.png" alt="Фото персонажа Джун"
-     width="512" height="900">
+     <img class="images_style" src="./img/June6.png" alt="Фото персонажа Джун">
      <h4>3д  модель Джун Дарби</h4>
      <p> 3д модель под анимацию количество полигонов 10200. Текстурные карты: diff, metal, rough, norm. Размер карт 2048*2048</p>
 
