--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/styles/style.css"> 
 </head>
-<body>
+<body  class="aligncenter">
     <a class="link" href="index.html">Главная</a><br>
     <a class="link" href="#">Каталог</a><br>
     <a class="link" href="contacts.html">Контакты</a><br>
@@ -13,7 +14,7 @@
     <h1 class="title">
         Каталог
     </h1>
-    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit voluptate incidunt, dicta nam eum iure animi molestiae
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit voluptate incidunt, dicta nam eum iure animi molestiae
          sequi libero recusandae corporis consequuntur voluptas sed ratione reiciendis, ea voluptatem ab magni quaerat amet. 
          Iure similique, exercitationem sunt quisquam modi fuga quidem reprehenderit animi veniam maiores sapiente possimus placeat 
          repellat at fugit laboriosam quam hic corporis iste fugiat aliquam voluptas et cupiditate nobis. Voluptatibus ducimus voluptatum 
@@ -32,8 +33,7 @@
      <h4>3д  модель Джун Дарби</h4>
      <p> 3д модель под анимацию количество полигонов 10200. Текстурные карты: diff, metal, rough, norm. Размер карт 2048*2048</p>
 
-     <img src="./img/Pose_3.png" alt="Фото персонажа Мико"
-     width="512" height="900">
+     <img class="images_style" src="./img/Pose_3.png" alt="Фото персонажа Мико">
      <h4>3д  модель Мико Накадаи</h4>
      <p> 3д модель под анимацию количество полигонов 11000. Текстурные карты: diff, metal, rough, norm. Размер карт 2048*2048</p>
 </body>
