urok_8_seminar complete

--- a/hw_sem6/index.html
+++ b/hw_sem6/index.html
@@ -50,6 +50,37 @@
         <img src="./assets/imgs/6 (1).svg" alt="">
 
     </section>
+    <section class="box-container">
+        <div class="box-item1 box-border">
+            <img src="./assets/imgs/icon.svg" class="box-item__icon" alt="иконка1">
+            <h2 class="box-item__title">Grow Your Business</h2>
+            <p class="box-item__text">Leverage agile frameworks to provide a robust synopsis 
+                for high level overviews.</p>
+                <a href="#" class="box-item__reff">Read More ...</a>
+        </div>
+        <div class="box-item2 box-border">
+            <img src="./assets/imgs/icon (2).svg" class="box-item__icon" alt="иконка2">
+            <h2 class="box-item__title">Get Quality Ieads</h2>
+            <p class="box-item__text">Leverage agile frameworks to provide a robust synopsis 
+                for high level overviews.</p>
+                <a href="#" class="box-item__reff">Read More ...</a>    
+        </div>
+        <div class="box-item3 box-border">
+            <img src="./assets/imgs/icon (3).svg" class="box-item__icon" alt="иконка3">
+            <h2 class="box-item__title">Drive More Sales</h2>
+            <p class="box-item__text">Leverage agile frameworks to provide a robust synopsis 
+                for high level overviews.</p>
+                <a href="#" class="box-item__reff">Read More ...</a>
+        </div>
+    </section>
+    <section3 class="section3">
+        <div>
+            <header class="section3-header">
+                Why You Should Choose Us.
+            </header>
+        </div>
+
+    </section3>
 
 </body>
 </html>
