urok_9_seminar complete

--- a/hw_sem6/index.html
+++ b/hw_sem6/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebFirst</title>
     <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
+
 <body>
     <header class="header">
         <img class="header-image" src="./assets/imgs/Logo.svg" alt="логотип">
         <nav>
             <ul class="menu">
                 <li><a href="#" class="menu-home-item">Home</a></li>
-                <li><a href="#" class="menu-item" >About Us</a></li>
-                <li><a href="#" class="menu-item" >Services</a></li>
-                <li><a href="#" class="menu-item" >Features</a></li>
-                <li><a href="#" class="menu-item" >Team</a></li>
-                <li><a href="#" class="menu-item" >Blog</a></li>
-                <li><a href="#" class="menu-item" >Contact</a></li>
+                <li><a href="#" class="menu-item">About Us</a></li>
+                <li><a href="#" class="menu-item">Services</a></li>
+                <li><a href="#" class="menu-item">Features</a></li>
+                <li><a href="#" class="menu-item">Team</a></li>
+                <li><a href="#" class="menu-item">Blog</a></li>
+                <li><a href="#" class="menu-item">Contact</a></li>
 
-            </ul>            
+            </ul>
         </nav>
         <div>
             <button class="header-button">Get Started</button>
@@ -54,33 +56,81 @@
         <div class="box-item1 box-border">
             <img src="./assets/imgs/icon.svg" class="box-item__icon" alt="иконка1">
             <h2 class="box-item__title">Grow Your Business</h2>
-            <p class="box-item__text">Leverage agile frameworks to provide a robust synopsis 
+            <p class="box-item__text">Leverage agile frameworks to provide a robust synopsis
                 for high level overviews.</p>
-                <a href="#" class="box-item__reff">Read More ...</a>
+            <a href="#" class="box-item__reff">Read More ...</a>
         </div>
         <div class="box-item2 box-border">
             <img src="./assets/imgs/icon (2).svg" class="box-item__icon" alt="иконка2">
             <h2 class="box-item__title">Get Quality Ieads</h2>
-            <p class="box-item__text">Leverage agile frameworks to provide a robust synopsis 
+            <p class="box-item__text">Leverage agile frameworks to provide a robust synopsis
                 for high level overviews.</p>
-                <a href="#" class="box-item__reff">Read More ...</a>    
+            <a href="#" class="box-item__reff">Read More ...</a>
         </div>
         <div class="box-item3 box-border">
             <img src="./assets/imgs/icon (3).svg" class="box-item__icon" alt="иконка3">
             <h2 class="box-item__title">Drive More Sales</h2>
-            <p class="box-item__text">Leverage agile frameworks to provide a robust synopsis 
+            <p class="box-item__text">Leverage agile frameworks to provide a robust synopsis
                 for high level overviews.</p>
-                <a href="#" class="box-item__reff">Read More ...</a>
+            <a href="#" class="box-item__reff">Read More ...</a>
         </div>
     </section>
     <section3 class="section3">
-        <div>
-            <header class="section3-header">
+        <div class="section3-header">
+            <header class="section3-header__text">
                 Why You Should Choose Us.
             </header>
+            <p class="section3-header__itemtext">Distinctively exploit optimal alignments for intuitive bandwidth.
+                Quickly coordinate e-business
+                applications through revolutionary catalysts.</p>
+        </div>
+        <div class="section3-content center" >
+            <div class="section3-item__content box-border">
+                <img src="./assets/imgs/section3_1.svg" alt="">
+                <div class="section3-item__wrapper">
+                    <h3 class="section3-content__title">Keyword Research</h3>
+                    <p class="section3-content__text">Business applications through revolutionary catalysts for chang
+                        the Seamlessly underwhelm dures.</p>
+                    <button class="section3-button">Learn More
+                        <svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" viewBox="0 0 6 10" fill="none">
+                            <path d="M1 9L5 5L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+            <div class="section3-item__content box-border">
+                <img src="./assets/imgs/section3_2.svg" alt="">
+                <div class="section3-item__wrapper">
+                    <h3 class="section3-content__title">Seo Optimazadion</h3>
+                    <p class="section3-content__text">Business applications through revolutionary catalysts for chang
+                        the Seamlessly underwhelm dures.</p>
+                    <button class="section3-button">Learn More
+                        <svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" viewBox="0 0 6 10" fill="none">
+                            <path d="M1 9L5 5L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+            <div class="section3-item__content box-border">
+                <img src="./assets/imgs/section3_3.svg" alt="">
+                <div class="section3-item__wrapper">
+                    <h3 class="section3-content__title">Social Marketing</h3>
+                    <p class="section3-content__text">Business applications through revolutionary catalysts for chang
+                        the Seamlessly underwhelm dures.</p>
+                    <button class="section3-button">Learn More
+                        <svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" viewBox="0 0 6 10" fill="none">
+                            <path d="M1 9L5 5L1 1" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
         </div>
 
     </section3>
 
 </body>
+
 </html>
