urok12_sem fixed

--- a/hw11/index.html
+++ b/hw11/index.html
@@ -44,19 +44,23 @@
         </picture>
         
         <div class="section__content">
-            <p class="title">
+            <h1 class="title">
                 THE BRAND
-            </p>
-            <span class="title__item">OF LUXERIOUS FASHION</span>
+            </h1>
+            <span class="title-item">OF LUXERIOUS 
+                <span class="title-item__end">
+                    FASHION
+                </span></span>
 
         </div>
 
     </section1>
-    <section2 class="categories center">
+    <div class="section2 center">
+         <section2 class="categories center">
         <div class="section2-content ">
             <div class="image-txt-wrapper">
                 <picture >
-                    <source media="(min-width: 375px) and (max-width: 767px)" srcset="./assets/imgs/sect2_img1_tablet.png">
+                    <source media="(min-width: 767px) and (max-width: 1439px)" srcset="./assets/imgs/sect2_img1_tablet.png">
                     <img src="./assets/imgs/sect2_img1.png" alt="девушка">
                     <div class="image-bg">  </div>
                 </picture>                
@@ -71,7 +75,7 @@
         <div class="section2-content">
             <div class="image-txt-wrapper">
                 <picture>
-                    <source media="(min-width: 375px) and (max-width: 767px)" srcset="./assets/imgs/sect2_img2_tablet.png">
+                    <source media="(min-width: 767px) and (max-width: 1439px)" srcset="./assets/imgs/sect2_img2_tablet.png">
                     <img src="./assets/imgs/sect2_img2.png" alt="парень">
                     <div class="image-bg">  </div>
                 </picture>
@@ -85,7 +89,7 @@
         <div class="section2-content">
             <div class="image-txt-wrapper">
                 <picture>
-                    <source media="(min-width: 375px) and (max-width: 767px)" srcset="./assets/imgs/sect2_img3_tablet.png">
+                    <source media="(min-width: 767px) and (max-width: 1439px)" srcset="./assets/imgs/sect2_img3_tablet.png">
                     <img src="./assets/imgs/sect2_img3.png" alt="ребенок">
                     <div class="image-bg">  </div>
                 </picture>
@@ -100,7 +104,7 @@
         <div class="section2-content__4">
             <div class="image-txt-wrapper">
                 <picture>
-                    <source media="(min-width: 375px) and (max-width: 767px)" srcset="./assets/imgs/sect2_img4_tablet.png">
+                    <source media="(min-width: 767px) and (max-width: 1439px)" srcset="./assets/imgs/sect2_img4_tablet.png">
                     <img src="./assets/imgs/sect2_img4.png" alt="вещи">
                     <div class="image-bg">  </div>
                 </picture>
@@ -111,6 +115,8 @@
             </div>
         </div>
     </section2>
+    </div>
+   
     <div class="fetured center">
         <p class="fetured-title">
             Fetured Items
